tests/NormalTests/paczka1/fuzzy1/28213044.err
Error in line 11: x9ufg9 S582 76,2
Error in line 24: Qj4b4nE S418 43,4
Error in line 17: Nrh A324 4,3
Error in line 33: Qj4b4nE S582 -1,6
Error in line 31: A324 S582 19,4
